<resources>
    <string name="app_name">Notepad</string>

    <string name="note_title_deleted">deleted</string>

    <string name="note_detail_material_builder_delete_note_title">Deleting a note</string>
    <string name="note_detail_material_builder_delete_note_message">Are you sure you want to delete the note</string>
    <string name="note_detail_material_builder_delete_note_positive_button">Delete</string>
    <string name="note_detail_material_builder_delete_note_negative_button">Cancel</string>

    <string name="note_detail_material_builder_back_on_pressed_title">Warning !</string>
    <string name="note_detail_material_builder_back_on_pressed_message">You may lose the changes, do you really want to continue?</string>
    <string name="note_detail_material_builder_back_on_pressed_positive_button">Confirm</string>
    <string name="note_detail_material_builder_back_on_pressed_negative_button">Cancel</string>

    <string name="note_detail_action_delete">Delete</string>
    <string name="note_detail_action_save">Save</string>
    <string name="note_detail_action_undo">Undo</string>
    <string name="note_detail_action_redo">Redo</string>
    <string name="note_detail_nb_character">character</string>
    <string name="note_detail_nb_characters">characters</string>
    <string name="note_detail_is_empty">Title should not be empty</string>

    <string name="note_list_search">Search</string>
    <string name="note_list_toolbar_sort_title">Sort by :</string>
    <string name="note_list_toolbar_sort_by_date">Date</string>
    <string name="note_list_toolbar_sort_by_alphabetical">Alphabetical</string>
    <string name="note_list_toolbar_sort_by_favorite">Favorite</string>

    <string name="left_drawer_home">Home</string>
    <string name="left_drawer_favorite">Starred</string>
    <string name="left_drawer_trash">Trash</string>
</resources>
